Even spacing fixes

--- a/html/sass/layout/header/_desktop.scss
+++ b/html/sass/layout/header/_desktop.scss
@@ -1151,7 +1151,7 @@ header {
 			}
 			&.col-7 {
 				.flexBox {
-					height: 498px;
+					height: 502px;
 				}
 			}
 		}
@@ -1162,7 +1162,7 @@ header {
 				.SubmenuWrapper {
 					&.col-7 {
 						.flexBox {
-							height: 498px;
+							height: 502px;
 						}
 					}
 				}
